fix z-index on sidebar and cookie consent

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -361,7 +361,7 @@ hr {
 }
 .sticky {
 	position: sticky;
-	z-index: 9999999;
+	z-index: 9997;
 }
 .top-0 {
 	top: 0 !important;
